fix: fix dark mode for RTE

--- a/ui/src/css/dp/partials/rte.css
+++ b/ui/src/css/dp/partials/rte.css
@@ -5,12 +5,14 @@
   letter-spacing: normal;
 }
 
-.carta-theme__default {
-  --text-color: inherit !important;
-}
-
 .carta-toolbar {
   height: unset !important;
   flex-wrap: wrap !important;
   gap: calc(var(--spacing) * 2);
+}
+
+@media (prefers-color-scheme: dark) {
+  .shiki, .shiki span {
+    color: var(--shiki-dark) !important;
+  }
 }
